src/test/resources/public/input/typechecking/fail/double_decl/fail17.jova
class Helper{

}

/* class with 3 double decl */
class Test0{
    private int func(int x, string y, bool z){
        return 0;
    }

    private int func(int x, string y, bool z, Helper x, Helper y, Helper z){
        return 0;
    }
}